Fix Dockerfile regtest port

--- a/0.12/Dockerfile
+++ b/0.12/Dockerfile
@@ -69,6 +69,6 @@ COPY docker-entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
 
-EXPOSE 9998 9999 19998 19999
+EXPOSE 9998 9999 18332 19998 19999
 
 CMD ["dashd"]
