Fix regtest RPC port for 0.15 and 0.16 images

--- a/0.16/Dockerfile
+++ b/0.16/Dockerfile
@@ -45,6 +45,6 @@ COPY docker-entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
 
-EXPOSE 9998 9999 19998 19999
+EXPOSE 9998 9999 19898 19998 19999
 
 CMD ["dashd"]
