Fix deprecated SKS key servers

--- a/0.14/Dockerfile
+++ b/0.14/Dockerfile
@@ -15,10 +15,10 @@ RUN useradd -r dash \
     8173322B6FA58B2C4AF5338C166C2AF8EC105D04 \
     4B88269ABD8DF332 \
   ; do \
-    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" || \
+    gpg --keyserver keyserver.ubuntu.com --recv-keys "$key" || \
     gpg --keyserver pgp.mit.edu --recv-keys "$key" || \
     gpg --keyserver keyserver.pgp.com --recv-keys "$key" || \
-    gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "$key" ; \
+    gpg --keyserver keys.openpgp.org --recv-keys "$key" ; \
   done
 
 ENV GOSU_VERSION=1.10
