--- a/0.16/Dockerfile
+++ b/0.16/Dockerfile
@@ -14,10 +14,10 @@ RUN useradd -r dash \
     B42F6819007F00F88E364FD4036A9C25BF357DD4 \
     29590362EC878A81FD3C202B52527BEDABE87984 \
   ; do \
-    gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$key" || \
+    gpg --keyserver keyserver.ubuntu.com --recv-keys "$key" || \
     gpg --keyserver pgp.mit.edu --recv-keys "$key" || \
     gpg --keyserver keyserver.pgp.com --recv-keys "$key" || \
-    gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "$key" ; \
+    gpg --keyserver keys.openpgp.org --recv-keys "$key" ; \
   done
 
 ENV GOSU_VERSION=1.10
