--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       matrix:
         version:
+          - '22'
           - '20'
           - '19'
           - '18'
@@ -61,8 +62,12 @@ jobs:
             fi
           fi
 
-          if [[ ${DASH_CORE_VERSION} != *"alpine"* ]] && [ $(version ${DASH_CORE_VERSION}) -ge $(version "20") ]; then
-            PLATFORMS="linux/amd64,linux/arm/v7,linux/arm64"
+          if [[ ${DASH_CORE_VERSION} != *"alpine"* ]]; then
+            if [ $(version ${DASH_CORE_VERSION}) -ge $(version "22") ]; then
+              PLATFORMS="linux/amd64,linux/arm64"
+            elif [ $(version ${DASH_CORE_VERSION}) -ge $(version "20") ]; then
+              PLATFORMS="linux/amd64,linux/arm/v7,linux/arm64"
+            fi
           fi
 
           echo ::set-output name=build_date::$(date -u +'%Y-%m-%dT%H:%M:%SZ')
